# FRDOS

./: CMakeLists.txt  CMakePresets.json  commands.txt  gdbinit.gdb  readme.md
iso/EFI/BOOT/: BOOTX64.efi
iso/boot/grub/: grub.cfg
x64/: CMakeLists.txt  linker_x64.ld  main x64.cpp
x86/: CMakeLists.txt  linker_x86.ld  main x86.cpp
